Missing mouse cursor when sharing a screen on Wayland
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox112 | --- | fixed |
People
(Reporter: jgrulich, Assigned: jgrulich)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36
Steps to reproduce:
Mouse cursor is missing when sharing a window or a screen under Wayland using PipeWire desktop capturer. This is because recent WebRTC no longer uses embedded mouse cursor and the information is sent separately as PipeWire stream metadata. For that reason a separate implementation of mouse cursor monitor was written, but it is not enabled in Firefox builds.
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Assignee | ||
Comment 2•2 years ago
|
||
Mouse cursor is no longer embedded in PipeWire stream and is rather send
as a metadata. For that reason there is MouseCursorMonitorPipeWire which
is needed for mouse cursor to be properly updated and monitored.
Updated•2 years ago
|
Comment 4•2 years ago
|
||
bugherder |
Updated•2 years ago
|
Description
•