Bug 1816431 - build MouseCursorMonitorPipeWire for wayland screen sharing r=stransky,ng,jib

Mouse cursor is no longer embedded in PipeWire stream and is rather send
as a metadata. For that reason there is MouseCursorMonitorPipeWire which
is needed for mouse cursor to be properly updated and monitored.

Differential Revision: https://phabricator.services.mozilla.com/D169628