third_party/libwebrtc/modules/desktop_capture/mouse_cursor_monitor_linux.cc
@@ -17,7 +17,7 @@
 #include "modules/desktop_capture/linux/x11/mouse_cursor_monitor_x11.h"
 #endif  // defined(WEBRTC_USE_X11)
 
-#if defined(WEBRTC_USE_PIPEWIRE) && !defined(WEBRTC_MOZILLA_BUILD)
+#if defined(WEBRTC_USE_PIPEWIRE)
 #include "modules/desktop_capture/linux/wayland/mouse_cursor_monitor_pipewire.h"
 #endif  // defined(WEBRTC_USE_PIPEWIRE)
 
@@ -48,7 +48,8 @@ MouseCursorMonitor* MouseCursorMonitor::CreateForScreen(
 // static
 std::unique_ptr<MouseCursorMonitor> MouseCursorMonitor::Create(
     const DesktopCaptureOptions& options) {
-#if defined(WEBRTC_USE_PIPEWIRE) && !defined(WEBRTC_MOZILLA_BUILD)
+
+#if defined(WEBRTC_USE_PIPEWIRE)
   if (options.allow_pipewire() && DesktopCapturer::IsRunningUnderWayland() &&
       options.screencast_stream()) {
     return std::make_unique<MouseCursorMonitorPipeWire>(options);
